# akino-concierge

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/src/: main.py
backend/src/core/: config.py  database.py
backend/src/models/: models.py
backend/src/services/messaging/: base.py  zalo.py
backend/src/tasks/: celery_app.py  messaging_tasks.py
