[project]
name = "hms-backend"
version = "0.1.0"
description = "Hotel Management System - Backend"
requires-python = ">=3.12"

dependencies = [
    # API framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",   # ASGI server to run FastAPI

    # Database
    "sqlalchemy[asyncio]>=2.0.0",  # ORM (async version)
    "asyncpg>=0.29.0",             # Async PostgreSQL driver
    "alembic>=1.13.0",             # Database migrations

    # Task queue
    "celery>=5.4.0",
    "redis>=5.0.0",

    # Data validation (comes with FastAPI but pinned here for clarity)
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",    # Load config from .env files

    # HTTP client (for calling Zalo API, OTA APIs)
    "httpx>=0.27.0",               # Modern async HTTP client, replaces requests
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",               # Also used for testing FastAPI
]

# ─── Ruff configuration ───────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (common bug patterns)
    "UP",  # pyupgrade (use modern Python syntax)
]
ignore = [
    "E501",  # Line too long — Ruff formatter handles this
]

[tool.ruff.format]
quote-style = "double"

# ─── mypy configuration ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true                    # Enable all strict type checks
ignore_missing_imports = true    # Don't error on untyped third-party libs

# ─── pytest configuration ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"            # All async test functions run automatically
testpaths = ["tests"]
